qmake/generators/win32/msvc_nmake.cpp
@@ -662,8 +662,6 @@ void NmakeMakefileGenerator::writeLinkCommand(QTextStream &t, const QString &ext
 
 void NmakeMakefileGenerator::writeResponseFileFiles(QTextStream &t, const ProStringList &files)
 {
-    if (files.isEmpty())
-        return;
     // Add line breaks in file lists in reponse files to work around LNK1170.
     // The actual line length limit is 131070, but let's use a smaller limit
     // in case other tools are similarly hampered.
